<resources>
    <string name="app_name">ReparaTech</string>
    <string name="server_url_hint">Server URL</string>
    <string name="save_text">Save</string>
    <string name="url_cannot_be_empty_text">URL cannot be empty</string>
    <string name="et_name">Name</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_email">Email</string>
    <string name="register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="list_of_products">List of Products</string>
    <string name="list_of_repair_categories">List of Repair Categories </string>
    <string name="ndOpen">Open</string>
    <string name="ndClose">Close</string>
    <string name="date">Date</string>
    <string name="txt_time">Time</string>
    <string name="chosen_date">Chosen Date</string>
    <string name="chosen_time">Chosen Time</string>
    <string name="txt_my_calendar">My Calendar</string>
    <string name="txt_back">Back</string>
    <string name="btndate">Date</string>
    <string name="txt_myCalendar">MY CALENDAR</string>
    <string name="txt_repair_bookings">Repair Bookings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">Product Image</string>
    <string name="name_product">Product Name</string>
    <string name="price">€</string>
    <string name="add_shop_cart">Add</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="description">Description</string>
    <string name="txt_price_product">Price</string>
    <string name="txt_product_name">Product Name</string>
    <string name="homepage">Homepage</string>
    <string name="list_of_accessories">List of Accessories</string>
    <string name="txt_bestselling_productName">PRODUCT NAME</string>
    <string name="txt_bestselling_productPrice">PRICE</string>
    <string name="txt_recently_added_products">RECENTLY ADDED PRODUCTS</string>
    <string name="txt_best_selling_products">BEST-SELLING PRODUCTS</string>
    <string name="label_register">Register</string>
    <string name="txt_myAgenda">My Agenda</string>
    <string name="txt_myRepairBookings">My Repair Bookings</string>
    <string name="txt_someRepairsWeDo">SOME OF THE REPAIRS WE DO</string>
    <string name="txt_viewDetails">View Details</string>
    <string name="txt_AllCategories">All Repair Categories</string>
    <string name="txt_repair_category_description">Little Description</string>
    <string name="txt_camera_issues">Camera Issues</string>
    <string name="expandable_text">We Sanchhaya Education Pvt. Ltd., are registered and headquartered
        at BC 227, 2nd Floor, Matrix Business Tower, B4, Sector 132, Noida, UP-201301, hereinafter
        referred to as GeeksforGeeks. We also offer paid Courses managed by Sanchhaya Classes Pvt. Ltd. </string>
    <string name="txt_cost_repair_description">How Much Will the Repair Cost?</string>
    <string name="txt_long_repair_take">How Long Will the Repair Take?</string>
    <string name="txt_wearables_solutions">Wearables Solutions:</string>
    <string name="txt_desktops_laptops_solutions">Desktops and Laptops Solutions:</string>
    <string name="txt_tablets_solutions">Tablets Solutions:</string>
    <string name="txt_mobile_phones_solutions">Mobile Phones Solutions:</string>
    <string name="txt_btn_request_quote">Request Quote</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="reparacoes_de_wearables">Reparações de wearables</string>
    <string name="reparacoes_de_desktops_laptops">Reparações de desktops e laptops</string>
    <string name="reparacoes_de_telemoveis_tablets">Reparações de telemóveis e tablets</string>
    <string name="txt_search">Search</string>
    <string name="txt_search_repair">Search Repair</string>
    <string name="change_api_url">Change API URL</string>
    <string name="sign_out">Sign Out</string>
    <string name="register_successful_verify_your_email">Register successful. Verify your email</string>
    <string name="please_choose_a_weekday">Please, choose a weekday.</string>
    <string name="choose_an_hour_between_9am_and_18pm">Choose an hour between 9am and 6pm.</string>
    <string name="audio">Audio</string>
    <string name="if_your_device_does_not_transmit_sounds_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device does not transmit sounds, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="battery">Battery</string>
    <string name="if_your_device_has_battery_damaged_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has battery damaged, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="buttons">Buttons</string>
    <string name="if_your_device_has_some_button_damaged_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has some button damaged, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="screen">Screen</string>
    <string name="if_your_device_has_a_damaged_screen_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has a damaged screen, our team is ready to solve the problem with maximum efficiency and quality.\".</string>
    <string name="camera">Camera</string>
    <string name="if_your_device_has_camera_damaged_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has camera damaged, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="connectivity">Connectivity</string>
    <string name="if_your_device_has_connectivity_issues_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has connectivity issues, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="data_recovery">Data Recovery</string>
    <string name="have_you_lost_important_data_that_you_d_like_to_recover_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">Have you lost important data that you\'d like to recover? Our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="hardware">Hardware</string>
    <string name="do_you_want_to_carry_out_routine_maintenance_or_clean_the_internal_components_of_your_device_our_team_is_ready_to_do_it_with_maximum_efficiency_and_quality">Do you want to carry out routine maintenance or clean the internal components of your device? Our team is ready to do it with maximum efficiency and quality.</string>
    <string name="liquid_damage">Liquid Damage</string>
    <string name="has_your_device_fallen_into_the_pool_and_won_t_switch_on_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">Has your device fallen into the pool and won\'t switch on? Our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="network">Network</string>
    <string name="if_your_device_has_network_issues_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has network issues, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="software">Software</string>
    <string name="if_your_device_has_malicious_software_our_team_is_ready_to_solve_the_problem_with_the_utmost_efficiency_and_quality">If your device has malicious software, our team is ready to solve the problem with the utmost efficiency and quality.</string>
    <string name="storage">Storage</string>
    <string name="if_your_device_has_storage_issues_our_team_is_ready_to_solve_the_problem_with_maximum_efficiency_and_quality">If your device has storage issues, our team is ready to solve the problem with maximum efficiency and quality.</string>
    <string name="no_internet_connection_try_again_later">No internet connection. Try again later</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>
    <string name="register_failed">Register failed</string>
    <string name="quantity_with_2_dots">Quantity:</string>
    <string name="price_with_2_dots">Price:</string>
    <string name="details_with_2_dots">"Details: "</string>
    <string name="txt_cart">Cart</string>
    <string name="txt_wearables">Wearables:</string>
    <string name="txt_desktop_laptop">Desktop / Laptop:</string>
    <string name="txt_tablet">Tablet:</string>
    <string name="txt_mobile">Mobile:</string>
    <string name="txt_send">Send</string>
    <string name="txt_error_sending_repair_request">Error sending repair request</string>
    <string name="txt_repair_request_sent_successfully">Repair request sent successfully</string>
    <string name="txt_no_internet_connection_try_again_later">No internet connection. Try again later</string>
    <string name="txt_error_loading_products_try_again_later">Error loading products. Try again later</string>
    <string name="repair_request_sent_successfully">Repair request sent successfully</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="txt_item_my_booking">Booking</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_status">Status</string>
    <string name="repairs">Repairs</string>
    <string name="welcome_to_the_employee_page_use_the_side_menu_to_navigate_to_the_desired_page">Welcome to the employee page! Use the side menu to navigate to the desired page.</string>
    <string name="list_of_repairs">List of Repairs</string>
    <string name="euro_symbol"> €</string>
    <string name="complete_checkout_caps">COMPLETE CHECKOUT</string>
    <string name="total_with_twodots">TOTAL:</string>
    <string name="shopping_cart_caps">SHOPPING CART</string>
    <string name="euro_0_00">€0.00</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="finalize">Finalize</string>
    <string name="your_order_has_been_created">Your order has been created!</string>
    <string name="there_was_an_error_on_your_order">There was an error on your order</string>
    <string name="txt_error_loading_bookings_try_again_later">Error loading bookings, try again later</string>
    <string name="txt_booking_date">Date:</string>
    <string name="txt_time_booking">Time:</string>
    <string name="txt_status_booking">Status:</string>
    <string name="repair_bookings">Repair bookings</string>
    <string name="failed_to_refresh_token_login_again">Failed to refresh token, login again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unable_to_re_authenticate_please_login_again">Unable to re-authenticate, please login again.</string>
    <string name="you_need_to_be_logged_in_to_add_products_to_the_cart">You need to be logged in to add products to the cart</string>
    <string name="shipping_with_two_dots">SHIPPING:</string>
    <string name="_20_00_euros">20.00 €</string>
    <string name="set_repair_as_done">Set repair as done</string>
    <string name="comments">Comments</string>
    <string name="progress_status">Progress status</string>
    <string name="logo">Logo</string>
    <string name="product_name">Product name</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
</resources>