<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior ="single" >
        <item
            android:id="@+id/navHomepage"
            android:title="@string/homepage"
            android:icon="@drawable/ic_action_listacessories"/>
        <item
            android:id="@+id/navAccessories"
            android:title="@string/list_of_accessories"
            android:icon="@drawable/ic_action_listacessories"/>
        <item
            android:id="@+id/navListRepairCategories"
            android:title="@string/list_of_repair_categories"
            android:icon="@drawable/ic_action_listrepairs"/>

        <item
            android:id="@+id/navRepairBookings"
            android:title="@string/txt_repair_bookings"
            android:icon="@drawable/ic_action_listrepairs"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navLogin"
            android:icon="@drawable/ic_action_signin"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/navSignUp"
            android:icon="@drawable/ic_action_signup"
            android:title="@string/sign_up" />
    </group>

</menu>