<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/product_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvProductId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name" />

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/euro_symbol" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/_1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_marginLeft="16dp"
                    android:backgroundTint="@color/red"
                    android:background="@drawable/baseline_delete_24"
                    android:layout_width="40dp"
                    android:layout_height="40dp" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>