<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="Logo"
            android:src="@drawable/logo_reparatech"
            android:padding="20dp">

        </ImageView>
    </LinearLayout>

    <EditText
        android:id="@+id/etUsername"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="15"
        android:hint="@string/label_username"
        android:inputType="text" />

    <EditText
        style="@style/EditTextTheme"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="15"
        android:hint="@string/label_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="15"
        android:text="@string/label_login" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90" />

</LinearLayout>